--- a/Tutorium9/OnePageKiezApp/design.css
+++ b/Tutorium9/OnePageKiezApp/design.css
@@ -1,104 +1,115 @@
-.bild{
-    width :100%;
-   
+.bild {
+    width: 100%;
 }
 
-.box-1,.box-2,.box-3 {
+.box-1,
+.box-2,
+.box-3 {
     width: 288px;
 }
-.TT {width: 100%;
-height: 90%;}
 
-.Gain{width : 100%;
-height: 90%}
-
-.SP{width : 100%;
-    height: 90%}
-
-li{display: inline;
-font-size:20px}
-
-#h1{margin-left:5%}
-
-#inlinenav{ background-color: silver;
-  
+.TT {
+    width: 100%;
+    height: 90%;
 }
 
+.Gain {
+    width: 100%;
+    height: 90%
+}
 
+.SP {
+    width: 100%;
+    height: 90%
+}
 
+li {
+    display: inline;
+    font-size: 20px
+}
 
-section {float: left;
-margin-left: 3%}
+#h1 {
+    margin-left: 5%
+}
 
-table {float : right;
+#inlinenav {
+    background-color: silver;
+}
+
+section {
+    float: left;
+    margin-left: 3%
+}
+
+table {
+    float: right;
     margin-right: 2%;
-width : 30%}
+    width: 30%
+}
 
 #zitat {
     background-color: lightgray;
     margin-right: 5%;
-    margin-left : 3%;
+    margin-left: 3%;
 }
 
 #wrapper {
     width: 100%;
-   
 }
-
 
 #first {
     width: 330px;
     float: left;
     margin-left: 5%
 }
+
 #second {
     width: 330px;
     float: left
 }
+
 #third {
     width: 330px;
     float: left
 }
+
 #content {
-    width : 100%}
+    width: 100%
+}
 
 #inhalt {
     width: 900px;
-    
-   
 }
+
 #daten {
-    width :300px;
+    width: 300px;
     height: 200px;
-  margin-left : 5%;
+    margin-left: 5%;
 }
-#quote{
+
+#quote {
     margin-left: 7%
 }
 
-#page{
+#page {
     height: 100%;
-    background-color: lightgrey; 
+    background-color: lightgrey;
 }
 
-#container{
+#container {
     background-color: white;
-    margin:auto;
-   
+    margin: auto;
     max-width: 960px;
-    min-height: 400px; 
+    min-height: 400px;
     margin-top: 2em;
     margin-bottom: 2em;
     padding: 2em;
     box-shadow: -10px -10px 5px grey;
-    border-radius : 24px;
-   
-   
- 
+    border-radius: 24px;
 }
 
 footer {
-    text-align: center; 
+    text-align: center;
     background-color: silver;
 }
 
@@ -106,53 +117,41 @@ footer {
     line-height: 1.5em;
 }
 
+@media(min-width: 850px) {
+    .container-1 {
+        display: inline-flex;
+        justify-content: space-around;
+    }
+}
 
-
-@media(min-width: 850px){
-    
-  .container-1 {
-    display: inline-flex;
-    justify-content: space-around;
-    
-} 
-    
-} 
-
-@media (max-width: 500px){
-    .box-1,.box-2,.box-3{
+@media (max-width: 500px) {
+    .container-1 {
+        display: inline-flex;
+        justify-content: space-around;
+    }
+    .box-1,
+    .box-2,
+    .box-3 {
         width: 100%;
-        
-}
+    }
 }
 
-.box-1,.box-2,.box-3{
+.box-1,
+.box-2,
+.box-3 {
     position: relative;
     padding: 10px;
-   
-    
-    
 }
-h4 { 
-    position: absolute; 
+
+h4 {
+    position: absolute;
     bottom: 30px;
     left: 15px;
     font-size: 24px;
-    
-  width:100%;
-  text-align:left;
-  
-   
- }
+    width: 100%;
+    text-align: left;
+}
 
- 
-
- #mobilenav{
-     display:none
- }
-
-
-
-
-
-
-
+#mobilenav {
+    display: none
+}
